4.0 regression: FTBFS Qt plugin

../../modules/gui/qt/maininterface/compositor_x11_renderclient.cpp:20:10: fatal error: X11/extensions/Xdamage.h: Aucun fichier ou dossier de ce type
   20 | #include <X11/extensions/Xdamage.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
Edited by Rémi Denis-Courmont