qt: remove unused includes in X11 compositor

fix: #26236