modules/gui/qt/maininterface/compositor_x11.hpp
@@ -19,7 +19,6 @@
 #define COMPOSITORX11_HPP
 
 #include <QObject>
-#include <QWidget>
 #include "compositor.hpp"
 #include "videosurface.hpp"
 #include <memory>
@@ -27,6 +26,7 @@
 #include <xcb/xcb.h>
 
 class QMainWindow;
+class QWidget;
 class MainUI;
 class InterfaceWindowHandler;
 class VideoWindowHandler;
